--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 
     <script src="bundle.js"></script>
 
@@ -27,7 +28,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Buy this pixel</h4>
+                <h4 class="modal-title" id="myModalLabel">Buy the pixel at <span id="targetPixel"></span></h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
