--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script type="text/javascript" src="config/smartContractConfig.js"></script>
+    <script type="text/javascript" src="src/web3.min.js"></script>
     <script type="text/javascript" src="src/truffle-contract.min.js"></script>
     <script type="text/javascript" src="src/app.js"></script>
 </head>
